--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -c build/webpack.dev.config.js",
+    "build": "webpack -c build/webpack.dev.config.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "point-in-polygon": "^1.1.0"
   }
 }
