--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/point-in-polygon": "^1.0.0",
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
@@ -18,6 +19,7 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "babel-loader": "^8.2.2",
     "point-in-polygon": "^1.1.0"
   }
 }
